# PRoMo_Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  gcc-arm-none-eabi.cmake  stm32_hal.cmake
application/: CMakeLists.txt  Makefile  control_loop.c  control_loop.h  debug.h  drive_speed_control.c  drive_speed_control.h  encoder.c  encoder.h  global.h  gpio.c  gpio.h  i2c.c  i2c.h  lerp.c  lerp.h  main.c  main.h  motor.c  motor.h  nrf24l01.c  nrf24l01.h  pid_controller.c  pid_controller.h  process_serial_commands.c  process_serial_commands.h  radio.c  radio.h  scheduler.c  scheduler.h  sensors.c  sensors.h  stm32_assert.h  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  usart.c  usart.h  utils.h
bsp/: CMakeLists.txt  gpio.c  gpio.h  i2c.c  i2c.h  promo_v0_1_bsp.h  spi.c  spi.h  ws2812b.c  ws2812b.h
bsp/PRoMo_v0_1/: CMakeLists.txt  README.txt  bsp.h  dma.c  dma.h  encoder.c  encoder.h  gpio.c  gpio.h  i2c.c  i2c.h  motor.c  motor.h  spi.h  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  time.c  time.h  usart.c  usart.h  utils.c  utils.h  ws2812b.c  ws2812b.h
cmake/: gcc-arm-none-eabi.cmake  stm32_hal.cmake
lib/MPU6050/: CMakeLists.txt  mpu_6050.c  mpu_6050.h
lib/NRF24/: CMakeLists.txt  nrf24l01.h
lib/PRoMo_lib/: CMakeLists.txt  control_loop.c  control_loop.h  odometry.c  odometry.h  pid_controller.c  pid_controller.h
lib/VL53L0X/: CMakeLists.txt  README.md  VL53L0X.c  VL53L0X.h
lib/logger/: CMakeLists.txt  logger.c  logger.h
lib/test/: test.h
lib/ws2812b/: ws2812b.c  ws2812b.h
remote/: Remote.ino
tools/: .gdbinit  stlink.cfg
tools/live_plotter/: promo_widgets.py  pyqt_mqtt.py  pyqt_plotter.py  pyqt_serial.py  requirements.txt
tools/serial_plotter/: __main__.py  pyqt_plotter.py  pyqt_serial.py
tools/serial_plotter.py/: pyqt_plotter.py  pyqt_serial.py
